--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "hello-ext"
-description = "An example extension."
+name = "sphinx-roles"
+description = "Canonical's custom Sphinx roles."
 dynamic = ["version", "readme"]
 requires-python = ">=3.10"
 dependencies = [
@@ -21,6 +21,7 @@ dev = [
     "bs4>=0.0.2",
     "furo>=2025.7.19",
     "lxml>=5.0",
+    "myst-parser>=4.0.1",
     "pytest>=8.4.0",
     "pytest-cov~=6.0",
     "pytest-mock~=3.12",
@@ -34,7 +35,7 @@ build-backend = "setuptools.build_meta"
 readme = { file = "README.md", content-type = "text/markdown" }
 
 [tool.setuptools_scm]
-write_to = "hello_ext/_version.py"
+write_to = "sphinx_roles/_version.py"
 # the version comes from the latest annotated git tag formatted as 'X.Y.Z'
 # version scheme:
 #   - X.Y.Z.post<commits since tag>+g<hash>.d<%Y%m%d>
@@ -60,7 +61,7 @@ git_describe_command = [
 ]
 
 [tool.setuptools.packages.find]
-include = ["hello_ext"]
+include = ["sphinx_roles"]
 namespaces = false
 
 [tool.codespell]
@@ -93,7 +94,7 @@ skip_empty = true
 exclude_also = ["if (typing\\.)?TYPE_CHECKING:"]
 
 [tool.pyright]
-strict = ["hello_ext"]
+strict = ["sphinx_roles"]
 pythonVersion = "3.10"
 pythonPlatform = "Linux"
 exclude = [
@@ -116,7 +117,7 @@ disallow_untyped_decorators = true
 disallow_any_generics = true
 
 [[tool.mypy.overrides]]
-module = ["hello_ext.*"]
+module = ["sphinx_roles.*"]
 disallow_untyped_defs = true
 no_implicit_optional = true
 
@@ -127,8 +128,7 @@ strict = false
 [tool.ruff]
 line-length = 88
 target-version = "py310"
-src = ["hello_ext", "tests"]
-extend-exclude = ["*/_version.py"]
+src = ["sphinx_roles", "tests"]
 
 [tool.ruff.format]
 docstring-code-format = true
